--- a/domain.yml
+++ b/domain.yml
@@ -1,3 +1,7 @@
+session_config:
+  carry_over_slots_to_new_session: true
+  session_expiration_time: 480
+
 actions:
 - utter_ask_cuisine
 - utter_ask_how_can_i_help
@@ -5,16 +9,19 @@ actions:
 - utter_default
 - utter_goodbye
 - utter_greet
-- utter_prompt_do_not_operate
+
 entities:
 - budget
 - budget_max
 - budget_min
 - cuisine
-- email_id
+- emailid
 - location
+
 forms:
 - restaurant_search_form
+- send_email_form
+
 intents:
 - budget_choice
 - greet
@@ -23,9 +30,7 @@ intents:
 - deny
 - goodbye
 - send_email
-session_config:
-  carry_over_slots_to_new_session: true
-  session_expiration_time: 480
+
 slots:
   budget:
     auto_fill: false
@@ -39,7 +44,7 @@ slots:
   cuisine:
     auto_fill: false
     type: unfeaturized
-  email_id:
+  emailid:
     auto_fill: false
     type: unfeaturized
   location:
@@ -49,6 +54,7 @@ slots:
     type: unfeaturized
   email_content:
     type: unfeaturized
+
 templates:
   utter_ask_cuisine:
   - buttons:
@@ -65,6 +71,15 @@ templates:
     - payload: north indian
       title: North Indian
     text: What kind of cuisine would you prefer?
+  utter_ask_budget:
+  - buttons:
+    - payload: Lesser than Rs. 300
+      title: Lesser than Rs. 300
+    - payload: Rs. 300 to 700
+      title: Rs. 300 to 700
+    - payload: More than 700
+      title: More than 700
+    text: "What's the average budget for two people?"
   utter_ask_how_can_i_help:
   - text: How may I help you today
   utter_ask_location:
@@ -77,5 +92,13 @@ templates:
   utter_greet:
   - text: Hey there! how may I help you
   - text: Hi! how can I help you
-  utter_prompt_do_not_operate:
-  - text: We do not operate in that area yet
+  utter_ask_emailid:
+  - text: "Should we send you details of all the restaurants on email?"
+  utter_ask_emailid_details:
+  - text: "To what email id should I send it to?"
+  utter_response_no_email:
+  - text: "Okay. Bon Appetit!"
+  utter_repsone_email_sent_success:
+  - text: "Sent. Bon Appetit!"
+  utter_repsone_email_sent_failed:
+  - text: "Sorry, facing issue with Email server presently. Team working on it."
